- New --slowdown option to increase (multiply) VBL wait times
- New NatFeats commands : NF_DEBUGGER invokes Hatari debugger
  from native program and NF_FASTFORWARD toggles fast forward on/off
- Allow BIOS, XBIOS, GEMDOS, VDI and AES tracing to be enabled without
  enabling also X/BIOS interception, GEMDOS HD emulation or extended VDI mode
- Debugger:
  - Fix: release mouse in all cases where debugger can be invoked
  - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly
  - Fix: "symbols" command crash when it was used during TOS bootup
  - Fix: TOS and cartridge addresses weren't (with all TOS versions)
    in address order which asserted in profile data post-processor
  - Fix: "next" command didn't work correctly in "hex" number base
  - Fix: DATA/BSS debug symbol offsets were interpreted based on
    (incorrect) VBCC's vlink behavior
  - removed limits on breakpoints and their conditions
  - when entering debugger, current program's DRI/GST format debug
    symbols are automatically read from it, if such are available
  - new --debug-except option to specify which exceptions invoke
    the debugger, and WinUAE CPU core support for -D toggle option
  - "next"/"dspnext" commands work like in other debuggers, they
    skip subroutine/exception calls, for all other instructions
    they works like "step" command (earlier they always moved to
    next instruction in memory)
  - "next" and "dspnext" commands support optional "instruction type"
    argument, which can be used (for example) to continue emulation
    until subroutine returns
  - "history" command takes optional parameter specifying how many
    instructions of history will be tracked
  - CPU & DSP profile commands have now subcommand for profiling loops
  - "CpuInstr" and "DspInstr" variables for count of instructions
    executed since emulation was last continued from debugger
  - In addition to "!" condition, also "<" and ">" conditions can store