@@ -112,6 +112,11 @@ is correct.</li>
 specified too little or too much memory.  For ST, 1MB memory size
 is usually fairly safe.</li>
 
+<li>Some games/demos can refuse to run when HD emulation is ON (as it is
+seen as an external cartridge). In STF/STE mode, it is also better to
+disable the MegaST's real time clock.
+</li>
+
 <li>TOS version.  ST demos and games may require some specific TOS
 version and not work at all with others. If you notice that this
 information is missing for some listed game or demo, please send mail
@@ -1611,6 +1616,12 @@ are just STE enhanced.  These are marked with '*'.</p>
       <a href="http://pouet.net/prod.php?which=17044">Reanimation</a></td>
       <td>before 1.0</td>
       <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Stax:
+      <a href="http://pouet.net/prod.php?which=23541">Compact Disk #65</a></td>
+      <td></td>
+      <td>Requires TOS &gt;= 1.06. MegaST's real time clock should be disabled</td>
     </tr>
     <tr>
       <td>T. Barker:
