@@ -52,6 +52,8 @@ Emulator:
   from native program and NF_FASTFORWARD toggles fast forward on/off
 - Allow BIOS, XBIOS, GEMDOS, VDI and AES tracing to be enabled without
   enabling also X/BIOS interception, GEMDOS HD emulation or extended VDI mode
+- Don't enable MegaST's real time clock by default, it can cause some crashes
+  in STF/STE mode
 - Debugger:
   - Fix: release mouse in all cases where debugger can be invoked
   - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly
